# user_service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 026496d3abd4_add_password_reset_tokens.py  0419493f9a8f_initial_schema.py  50e80851e984_add_refresh_tokens_table.py  8af59b9bef70_add_admin_flag_to_users.py  df51352ed8a7_add_users_table.py
app/exceptions/: handlers.py
app/models/: base.py  password_reset_token.py  refresh_token.py  user.py
app/repositories/: password_reset_token_repository.py  refresh_token_repository.py  user_repository.py
app/schemas/: auth.py  common.py  user.py
app/services/: auth_service.py  errors.py  user_service.py
tests/: conftest.py  test_admin.py  test_auth.py  test_users.py
